--- a/25may241122copia.html
+++ b/25may241122copia.html
@@ -34,6 +34,7 @@
 
 </html>
 
+/* archivo styles.css */
 body {
 font-family: Arial, sans-serif;
 display: flex;
@@ -210,7 +211,7 @@ for (let i = 0; i < data.getNumberOfRows(); i++) { const invitado=data.getValue(
     drawSheetName());
 
 
-    /****/ archivo searh.js ****/
+    /****/ archivo search.js ****/
     document.getElementById('search-input').addEventListener('input', function () {
     const searchTerm = this.value;
     drawSheetName(searchTerm);
