--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Invitados Samuel</title>
-    <link rel="shortcut icon" href="source/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://www.gstatic.com/charts/loader.js"></script>
-    <script defer src="script.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
@@ -20,10 +17,10 @@
     <nav class="nav">
         <div class="search-container">
             <input type="text" id="search-input" class="nav-input" placeholder="Buscar...">
-            <button class="search-icon btn btn-primary" type="button">Buscar</button>
+            <img src="source/search-icon.ico" alt="Buscar" class="search-icon">
         </div>
-        <button id="add-button" class="nav-button btn btn-success">
-            Agregar Invitado
+        <button id="add-button" class="nav-button">
+            <img src="source/add-icon.ico" alt="Agregar">
         </button>
     </nav>
     <main>
@@ -32,61 +29,7 @@
     <footer>
         <h1>Feliz Cumpleaños Samuel</h1>
     </footer>
-
-    <!-- Modal de agregar invitado -->
-    <div class="modal fade" id="add-modal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="addModalLabel">Agregar Invitado</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="add-form">
-                        <div class="mb-3">
-                            <label for="invitado" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="invitado" name="invitado" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="cantidad" class="form-label">Cantidad</label>
-                            <input type="number" class="form-control" id="cantidad" name="cantidad" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="ninos" class="form-label">Niños</label>
-                            <input type="number" class="form-control" id="ninos" name="ninos">
-                        </div>
-                        <div class="mb-3">
-                            <label for="confirmado" class="form-label">Confirmado</label>
-                            <select class="form-control" id="confirmado" name="confirmado" required>
-                                <option value="">Seleccionar...</option>
-                                <option value="Sí">Sí</option>
-                                <option value="No">No</option>
-                            </select>
-                        </div>
-                        <button type="submit" class="btn btn-primary" id="submit-button" disabled>Enviar</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal de confirmación -->
-    <div class="modal fade" id="confirmation-modal" tabindex="-1" aria-labelledby="confirmationModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="confirmationModalLabel">Resultado</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body" id="confirmation-message"></div>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="search.js"></script>
 </body>
 
 </html>
